syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "PlayerDieType.proto";
import "ServerBuff.proto";

// CmdId: 1231
// EnetChannelId: 0
// EnetIsReliable: true
message LifeStateChangeNotify {
	uint32 entity_id = 4;
	uint32 life_state = 6;
	uint32 source_entity_id = 5;
	string attack_tag = 1;
	PlayerDieType die_type = 13;
	uint32 move_reliable_seq = 9;
	repeated ServerBuff server_buff_list = 14;
}
